Fixed problem with overflow in pages

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -3,7 +3,7 @@
     height: 100%;
     position: absolute;
     margin-left: 60px;
-    overflow-y: hidden;
+    overflow: hidden;
 
     .tags {
         color: #ffd700;
